--- a/modules/odata-mock/package.json
+++ b/modules/odata-mock/package.json
@@ -11,26 +11,19 @@
   "scripts": {
     "compile": "tsc && copyfiles -f -e '**/*.ts' src/test/* dist/test && copyfiles -f src/server/resources/* dist/server/resources",
     "start": "node dist/server/server.js",
-    "start:dev": "npm run clean && npm run compile && export DEBUG=true && node dist/server/server ../test/varkes_config.json",
+    "start:dev": "npm run clean && npm run compile && export DEBUG=express:* && node dist/server/server ../test/varkes_config.json",
     "pretest": "npm run compile",
     "test": "mocha dist/test",
-    "clean": "rm -rf dist || true && rm -r logs || true"
+    "clean": "rm -rf dist || true && rm -r logs || true && rm -r generated || true"
   },
   "dependencies": {
     "@varkes/configuration": "^0.8.0",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
+    "@sap/cds": "^3.21",
+    "@sap/cds-dk": "^1.4.2",
+    "@sap/edm-converters": "^1.0.19",
+    "@sap/cds-odata-v2-adapter-proxy": "^1.4.15",
     "express": "^4.17.1",
-    "helmet": "^3.21.2",
-    "loopback": "^3.26.0",
-    "loopback-boot": "^3.3.1",
-    "loopback-component-explorer": "^6.5.0",
-    "loopback-connector": "^4.10.0",
-    "morgan": "^1.9.1",
-    "n-odata-server": "^0.4.1",
-    "odata2openapi": "^1.3.1",
-    "strong-error-handler": "^3.4.0"
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
